--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <title>
 Index
 </title>
+   <script src="https://github.com/Youngerer/summer/blob/scripts/index.js"></script>
+
 </head>
 <body>
 <div align='center'>
