--- a/index.html
+++ b/index.html
@@ -8,7 +8,22 @@ Index
 </head>
 <body>
 <div align='center'>
-<input type='button' value='Updating' onclick='alert("hello")'/>
+    <table>
+        <tr></tr>
+        <tr>
+      <td>
+          Title:<input type="text" />
+      </td>
+        </tr>
+        <tr>
+        <td>
+            Information:<textarea style="resize:none;"></textarea>
+        </td>
+        </tr>
+        <tr>
+        <td><input type='button' value='Updating' onclick='callfunc()' /></td>
+        </tr>
+        </table>
 </div>
 </body>
 </html>
