--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>爱来客优</title>
+    <script src="scripts/index.js"/>
+    <script src="scripts/jquery-2.2.3.js"/>
     
     
     <script >
@@ -133,6 +135,7 @@
         <tr>
             <td colspan="2">
                 <span style="color:red;">注意：店主因业务转移，门店转租，租金优惠，173 1055 7925！</span>
+                <input type='button' value='咨询' onclick="myconsole()"/>
             </td>
 
         </tr>
