--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>爱来客优</title>
-    <script src="scripts/index.js"/>
-    <script src="scripts/jquery-2.2.3.js"/>
+    <script src="scripts/index.js"></script>
+    <script src="scripts/jquery-2.2.3.js"></script>
     
     
     <script >
