new test pics commit

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
            </td>
        </tr>
          <tr>
-            <td>VR眼镜，商品编号：001</td>
+            <td><img src='pics/vrglass.PNG' style='width:50px;height:50px;'>VR眼镜，商品编号：001</td>
             <td>支持Android、IOS,不同尺寸手机，支持资源丰富<br/><span style="color:red;">原价75元，现价35元</span></td>
         </tr>
         <tr>
@@ -84,7 +84,7 @@
         </tr>
         <tr>
             <td>
-                真人CS对战，水弹多用冲锋枪，商品编号：008
+                <img src='pics/gun45.PNG' style='width:50px;height:50px;'>真人CS对战，水弹多用冲锋枪，商品编号：008
             </td>
             <td>
                 真人CS对战装备<br /><span style="color:red;">原价110元，现价70元</span>
@@ -100,7 +100,7 @@
         </tr>
         <tr>
             <td>
-                <img src='pics/wrj.png' style='width:50px;height:50px;'>四翼驱动无人机，商品编号：010
+                <img src='pics/wrj.PNG' style='width:50px;height:50px;'>四翼驱动无人机，商品编号：010
             </td>
             <td>
                 酷玩无人机<br /><span style="color:red;">原价140元，现价110元</span>
@@ -108,7 +108,7 @@
         </tr>
         <tr>
             <td>
-               电动遥控水上快艇，商品编号：011
+               <img src='pics/boat.PNG' style='width:50px;height:50px;'>电动遥控水上快艇，商品编号：011
             </td>
             <td>
                 酷玩遥控快艇<br /><span style="color:red;">原价160元，现价110元</span>
