indexhtml and forumjs

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <td>支持Android、IOS,不同尺寸手机，支持资源丰富<br/><span style="color:red;">原价75元，现价35元</span></td>
         </tr>
         <tr>
-      <td>VR射击蓝牙仿真游戏手柄，商品编号：002</td>
+      <td><img src='pics/vrgun.PNG' style='width:50px;height:50px;'>VR射击蓝牙仿真游戏手柄，商品编号：002</td>
        <td>支持Android、IOS,支持资源丰富，外观仿真，摇杆、震动、手柄多功能合一<br /><span style="color:red;">原价160元，现价110元</span></td>
         </tr>
         <tr>
@@ -35,7 +35,7 @@
         </tr>
         <tr>
             <td>
-                真人CS对战面具(变形金刚版)，商品编号：004
+                <img src='pics/glasstransform.PNG' style='width:50px;height:50px;'>真人CS对战面具(变形金刚版)，商品编号：004
             </td>
             <td>
                 真人CS户外运动护具<br /><span style="color:red;">原价35元，现价20元</span>
@@ -43,14 +43,14 @@
         </tr>
         <tr>
             <td>
-                CS对战面具(生化版) ，商品编号：005         
+                <img src='pics/glasschem.PNG' style='width:50px;height:50px;'>CS对战面具(生化版) ，商品编号：005         
             <td>
                 真人CS户外运动护具<br /><span style="color:red;">原价30元，现价15元</span>
             </td>
         </tr>
         <tr>
         <td>
-            真人CS对战，水弹多用步枪，商品编号：006
+            <img src='pics/gun31.PNG' style='width:50px;height:50px;'>真人CS对战，水弹多用步枪，商品编号：006
         </td>
         <td>
             真人CS对战装备<br /><span style="color:red;">原价120元，现价80元</span>
