--- a/pages/forum.html
+++ b/pages/forum.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html >
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>留言</title>
+ 
+    <title>脕么脩脭</title>
 
     <script src="../scripts/forum.js"></script>
 </head>
@@ -13,16 +13,16 @@
     <div id="addforum" align="center">
         <table>
             <tr>
-                <td>电话:</td>
+                <td>碌莽禄掳:</td>
                 <td><input id="phone" type="text" style="width:260px;"/></td>
             </tr>
             <tr>
-                <td>内容:</td>
+                <td>脛脷脠脻:</td>
                 <td><input id="content" type="text" style="width:260px;" /></td>
             </tr>
             <tr>
                 <td> </td>
-                <td><input type="button" value="提交" onclick="forumadd()"/></td>
+                <td><input type="button" value="脤谩陆禄" onclick="forumadd()"/></td>
             </tr>
         </table>
     </div>
