--- a/pages/forum.html
+++ b/pages/forum.html
@@ -1,8 +1,8 @@
-<html >
-<head>
- 
-    <title>ÁôÑÔ</title>
 
+<html>
+<head>
+    <title>留言</title>
+    <script src="../scripts/jquery-2.2.3.js"></script>
     <script src="../scripts/forum.js"></script>
 </head>
 <body>
@@ -12,16 +12,16 @@
     <div id="addforum" align="center">
         <table>
             <tr>
-                <td>µç»°:</td>
+                <td>电话:</td>
                 <td><input id="phone" type="text" style="width:260px;"/></td>
             </tr>
             <tr>
-                <td>ÄÚÈÝ:</td>
-                <td><input id="content" type="text" style="width:260px;" /></td>
+                <td>留言:</td>
+                <td><input id="content" type="text" style="width:360px;height:80px;resize:none;overflow:scroll;" /></td>
             </tr>
             <tr>
                 <td> </td>
-                <td><input type="button" value="Ìá½»" onclick="forumadd()"/></td>
+                <td><input type="button" value="提交" onclick="forumadd()"/></td>
             </tr>
         </table>
     </div>
