--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <tr>
             <td colspan="2">
                 <span style="color:red;">注意：店主因业务转移，门店转租，租金优惠，173 1055 7925！</span>
-                <input type='button' value='咨询' onclick="myconsole()"/>
+                <!--   <input type='button' value='咨询' onclick="myconsole()"/>  -->
             </td>
 
         </tr>
