--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </tr>
         <tr>
         <td>
-            真人CS对战面具(轻战版)，商品编号：003
+            <img src='pics/easyglass.PNG' style='width:50px;height:50px;'>真人CS对战面具(轻战版)，商品编号：003
          </td>
         <td>
             真人CS户外运动护具<br /><span style="color:red;">原价20元，现价15元</span>
@@ -58,7 +58,7 @@
         </tr>
         <tr>
             <td>
-                真人CS对战，水弹多用散弹枪，商品编号：007
+                 <img src='pics/gun21.PNG' style='width:50px;height:50px;'>真人CS对战，水弹多用散弹枪，商品编号：007
             </td>
             <td>
                 真人CS对战装备<br /><span style="color:red;">原价110元，现价70元</span>
