--- a/index.html
+++ b/index.html
@@ -110,13 +110,18 @@
         </tr>
         <tr>
             <td colspan="2">
+                <div align="center">
                 <span style="color:red;">注意：店主因业务转移，取货时间为工作日18:00后，取货、验货地点为本店，电话联系！</span>
+                </div>
             </td>
            
         </tr>
         <tr>
             <td colspan="2">
-                <span style="color:red;">注意：店主因业务转移，门店转租，租金优惠，173 1055 7925！</span>
+                <div align="center">
+                    <span style="color:red;"> 注意：</span>店主因业务转移，门店转租，
+                    <span style="color:red;">租金优惠，173 1055 7925！</span>
+                 </div>
                 <!--   <input type='button' value='咨询' onclick="myconsole()"/>  -->
             </td>
 
