--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </tr>
         <tr>
             <td>
-                休闲帽子，商品编号：009
+                <img src='pics/cap.PNG' style='width:50px;height:50px;'>休闲帽子，商品编号：009
             </td>
             <td>
                 服装、服饰<br /><span style="color:red;">原价20元，现价15元</span>
