--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 ﻿<html>
 <head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title>爱来客优</title>
     <link rel="icon" href="pics/iconsoccer.png" type="image/x-icon"/> 
