--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src=".PNG" class="picstyle"/>VR眼镜，商品编号：001<br/>
+                <img src="pics/vrglass.PNG" class="picstyle"/>VR眼镜，商品编号：001<br/>
                 支持Android、IOS,不同尺寸手机，支持资源丰富<br /><span style="color:red;">原价75元，现价35元</span>
             </div>
         </div>
@@ -25,7 +25,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src=".PNG" class="picstyle" />VR射击蓝牙仿真游戏手柄，商品编号：002<br />
+                <img src="pics/vrgun.PNG" class="picstyle" />VR射击蓝牙仿真游戏手柄，商品编号：002<br />
                 支持Android、IOS,支持资源丰富，外观仿真，摇杆、震动、手柄多功能合一<br /><span style="color:red;">原价160元，现价110元</span>
             </div>
         </div>
