--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src=".PNG" class="picstyle" />真人CS对战面具(轻战版)，商品编号：003<br />
+                <img src="pics/easyglass.PNG" class="picstyle" />真人CS对战面具(轻战版)，商品编号：003<br />
                 真人CS户外运动护具<br /><span style="color:red;">原价20元，现价15元</span>
             </div>
         </div>
@@ -41,7 +41,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src=".PNG" class="picstyle" />真人CS对战面具(变形金刚版)，商品编号：004<br />
+                <img src="pics/glasstransform.PNG" class="picstyle" />真人CS对战面具(变形金刚版)，商品编号：004<br />
                 真人CS户外运动护具<br /><span style="color:red;">原价35元，现价20元</span>
             </div>
         </div>
@@ -49,7 +49,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src=".PNG" class="picstyle" />CS对战面具(生化版) ，商品编号：005<br />
+                <img src="pics/glasschem.PNG" class="picstyle" />CS对战面具(生化版) ，商品编号：005<br />
                 真人CS户外运动护具<br /><span style="color:red;">原价30元，现价15元</span>
             </div>
         </div>
@@ -57,7 +57,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src=".PNG" class="picstyle" />真人CS对战，水弹多用步枪，商品编号：006<br />
+                <img src="pics/gun45.PNG" class="picstyle" />真人CS对战，水弹多用步枪，商品编号：006<br />
                 真人CS对战装备<br /><span style="color:red;">原价120元，现价80元</span>
             </div>
         </div>
@@ -65,7 +65,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src=".PNG" class="picstyle" />真人CS对战，水弹多用散弹枪，商品编号：007<br />
+                <img src="pics/gun21.PNG" class="picstyle" />真人CS对战，水弹多用散弹枪，商品编号：007<br />
                 真人CS对战装备<br /><span style="color:red;">原价110元，现价70元</span>
             </div>
         </div>
@@ -73,7 +73,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src=".PNG" class="picstyle" />真人CS对战，水弹多用冲锋枪，商品编号：008<br />
+                <img src="pics/gun31.PNG" class="picstyle" />真人CS对战，水弹多用冲锋枪，商品编号：008<br />
                 真人CS对战装备<br /><span style="color:red;">原价110元，现价70元</span>
             </div>
         </div>
@@ -81,7 +81,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src=".PNG" class="picstyle" />休闲帽子，商品编号：009<br />
+                <img src="pics/cap.PNG" class="picstyle" />休闲帽子，商品编号：009<br />
                 服装、服饰<br /><span style="color:red;">原价20元，现价15元</span>
             </div>
         </div>
@@ -89,7 +89,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src=".PNG" class="picstyle" />四翼驱动无人机，商品编号：010<br />
+                <img src="pics/wrj.PNG" class="picstyle" />四翼驱动无人机，商品编号：010<br />
                 酷玩无人机<br /><span style="color:red;">原价140元，现价110元</span>
             </div>
         </div>
@@ -97,7 +97,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src=".PNG" class="picstyle" />电动遥控水上快艇，商品编号：011<br />
+                <img src="pics/boat.PNG" class="picstyle" />电动遥控水上快艇，商品编号：011<br />
                 酷玩遥控快艇<br /><span style="color:red;">原价160元，现价110元</span>
             </div>
         </div>
