修改index.html delete useless products

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head>
-    <title>爱来客优</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>SugarWeb</title>
     <link rel="icon" href="pics/iconsoccer.png" type="image/x-icon" />
     <script src="scripts/index.js"></script>
     <script src="scripts/jquery-2.2.3.js"></script>
@@ -10,7 +11,7 @@
     <div align="center">
         <div class="divstyle">
            <div algin="center">
-               <span style="color:blue;font-size:25px;">爱来客优</span><br />推出室内射击，满弹夹（4-6发子弹）1元一次，最低消10元，可获赠QQ表情挂件。<br />
+               <span style="color:blue;font-size:25px;">SugarWeb</span><br /><br />
            </div>
         </div>
     </div>
@@ -27,54 +28,6 @@
             <div algin="center">
                 <img src="pics/vrgun.PNG" class="picstyle" />VR射击蓝牙仿真游戏手柄，商品编号：002<br />
                 支持Android、IOS,支持资源丰富，外观仿真，摇杆、震动、手柄多功能合一<br /><span style="color:red;">原价160元，现价110元</span>
-            </div>
-        </div>
-    </div>
-    <div align="center">
-        <div class="divstyle">
-            <div algin="center">
-                <img src="pics/easyglass.PNG" class="picstyle" />真人CS对战面具(轻战版)，商品编号：003<br />
-                真人CS户外运动护具<br /><span style="color:red;">原价20元，现价15元</span>
-            </div>
-        </div>
-    </div>
-    <div align="center">
-        <div class="divstyle">
-            <div algin="center">
-                <img src="pics/glasstransform.PNG" class="picstyle" />真人CS对战面具(变形金刚版)，商品编号：004<br />
-                真人CS户外运动护具<br /><span style="color:red;">原价35元，现价20元</span>
-            </div>
-        </div>
-    </div>
-    <div align="center">
-        <div class="divstyle">
-            <div algin="center">
-                <img src="pics/glasschem.PNG" class="picstyle" />CS对战面具(生化版) ，商品编号：005<br />
-                真人CS户外运动护具<br /><span style="color:red;">原价30元，现价15元</span>
-            </div>
-        </div>
-    </div>
-    <div align="center">
-        <div class="divstyle">
-            <div algin="center">
-                <img src="pics/gun45.PNG" class="picstyle" />真人CS对战，水弹多用步枪，商品编号：006<br />
-                真人CS对战装备<br /><span style="color:red;">原价120元，现价80元</span>
-            </div>
-        </div>
-    </div>
-    <div align="center">
-        <div class="divstyle">
-            <div algin="center">
-                <img src="pics/gun21.PNG" class="picstyle" />真人CS对战，水弹多用散弹枪，商品编号：007<br />
-                真人CS对战装备<br /><span style="color:red;">原价110元，现价70元</span>
-            </div>
-        </div>
-    </div>
-    <div align="center">
-        <div class="divstyle">
-            <div algin="center">
-                <img src="pics/gun31.PNG" class="picstyle" />真人CS对战，水弹多用冲锋枪，商品编号：008<br />
-                真人CS对战装备<br /><span style="color:red;">原价110元，现价70元</span>
             </div>
         </div>
     </div>
@@ -107,7 +60,7 @@
             <div algin="center">
                 商品编号<input id="code" type="text" style="width:300px;" /><br />
                 电话<input id="phone" type="text" style="width:300px;" /><br />
-                <span style="color:red;">截屏提交成功的弹窗作为订单依据，优惠先到先得</span><br/>
+                <span style="color:red;"></span><br/>
                 <input type="button" value="提交" onclick="getupload()" />
             </div>
         </div>
@@ -115,14 +68,14 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <span style="color:red;">注意：店主因业务转移，取货时间为工作日18:00后，取货、验货地点为本店，电话联系！</span>
+                <span style="color:red;">注意：</span>
             </div>
         </div>
     </div>
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <span style="color:red;">注意：店主因业务转移，门店转租，租金优惠，173 1055 7925！</span>
+                <span style="color:red;">注意：</span>
             </div>
         </div>
     </div>
