--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src="pics/vrglass.PNG" class="picstyle"/>VR眼镜，商品编号：001<br/>
+                 VR眼镜，商品编号：001 <br/>
                 支持Android、IOS,不同尺寸手机，支持资源丰富<br /><span style="color:red;">原价75元，现价35元</span>
             </div>
         </div>
@@ -26,7 +26,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src="pics/vrgun.PNG" class="picstyle" />VR射击蓝牙仿真游戏手柄，商品编号：002<br />
+                 VR射击蓝牙仿真游戏手柄，商品编号：002 <br />
                 支持Android、IOS,支持资源丰富，外观仿真，摇杆、震动、手柄多功能合一<br /><span style="color:red;">原价160元，现价110元</span>
             </div>
         </div>
@@ -34,7 +34,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src="pics/cap.PNG" class="picstyle" />休闲帽子，商品编号：009<br />
+                 休闲帽子，商品编号：009 <br />
                 服装、服饰<br /><span style="color:red;">原价20元，现价15元</span>
             </div>
         </div>
@@ -42,7 +42,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src="pics/wrj.PNG" class="picstyle" />四翼驱动无人机，商品编号：010<br />
+                四翼驱动无人机，商品编号：010 <br />
                 酷玩无人机<br /><span style="color:red;">原价140元，现价110元</span>
             </div>
         </div>
@@ -50,7 +50,7 @@
     <div align="center">
         <div class="divstyle">
             <div algin="center">
-                <img src="pics/boat.PNG" class="picstyle" />电动遥控水上快艇，商品编号：011<br />
+                 电动遥控水上快艇，商品编号：011 <br />
                 酷玩遥控快艇<br /><span style="color:red;">原价160元，现价110元</span>
             </div>
         </div>
@@ -65,19 +65,7 @@
             </div>
         </div>
     </div>
-    <div align="center">
-        <div class="divstyle">
-            <div algin="center">
-                <span style="color:red;">注意：</span>
-            </div>
-        </div>
-    </div>
-    <div align="center">
-        <div class="divstyle">
-            <div algin="center">
-                <span style="color:red;">注意：</span>
-            </div>
-        </div>
-    </div>
+ 
+  
 </body>
 </html>
