--- a/reactpages/reactone.html
+++ b/reactpages/reactone.html
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <title>Learn until gone</title>
-    <script src="../reactjs/react.js"></script>
-    <script src="../reactjs/react-dom.js"></script>
+    <script src="../reactjs/react.min.js"></script>
+    <script src="../reactjs/react-dom.min.js"></script>
     <script src="../scripts/jquery-2.2.3.js"></script>
 </head>
 <body>
