--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
     <link href="styles/index.css" rel="stylesheet" />
 </head>
 <body>
-    <div align="center">
+    <div align="center" id='protitle'>
         <div class="divstyle">
            <div algin="center">
-               <span style="color:blue;font-size:25px;">SugarWeb</span><br /><br />
+               <span style="color:blue;font-size:25px;">SugarWeb</span><br />
            </div>
         </div>
     </div>
-    <div align="center">
+    <div align="center" id='pro1'>
         <div class="divstyle">
             <div algin="center">
                  VR眼镜，商品编号：001 <br/>
@@ -23,7 +23,7 @@
             </div>
         </div>
     </div>
-    <div align="center">
+    <div align="center" id='pro2'>
         <div class="divstyle">
             <div algin="center">
                  VR射击蓝牙仿真游戏手柄，商品编号：002 <br />
@@ -31,7 +31,7 @@
             </div>
         </div>
     </div>
-    <div align="center">
+    <div align="center" id='pro3'>
         <div class="divstyle">
             <div algin="center">
                  休闲帽子，商品编号：009 <br />
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-    <div align="center">
+    <div align="center" id='pro4'>
         <div class="divstyle">
             <div algin="center">
                 四翼驱动无人机，商品编号：010 <br />
@@ -47,7 +47,7 @@
             </div>
         </div>
     </div>
-    <div align="center">
+    <div align="center" id='pro5'>
         <div class="divstyle">
             <div algin="center">
                  电动遥控水上快艇，商品编号：011 <br />
