--- a/index.html
+++ b/index.html
@@ -9,16 +9,26 @@
 </head>
 <body>
     <div align="center" id='protitle'>
-        <div class="divstyle">
-           <div algin="center">
-               <span style="color:blue;font-size:25px;">SugarWeb</span><br />
-           </div>
+        <div class="divstyle_title">
+            <div algin="center">
+                <span style="color:blue;font-size:25px;">SugarWeb</span>
+                <img id="arrow" class="arrow_init" src="pics/control_down.png" />
+            </div>
+        </div>
+    </div>
+    <div align="center" id="navtab">
+        <div class="divstyle_nav">
+            <a href="">Reactjs</a>
+            <a href="">Angularjs</a>
+            <a href="">Nodejs</a>
+            <a href="">AboutMe</a>
+            <input type="button" id="getjson" value="test" onclick="getJson()"/>
         </div>
     </div>
     <div align="center" id='pro1'>
         <div class="divstyle">
             <div algin="center">
-                 VR眼镜，商品编号：001 <br/>
+                VR眼镜，商品编号：001 <br />
                 支持Android、IOS,不同尺寸手机，支持资源丰富<br /><span style="color:red;">原价75元，现价35元</span>
             </div>
         </div>
@@ -26,7 +36,7 @@
     <div align="center" id='pro2'>
         <div class="divstyle">
             <div algin="center">
-                 VR射击蓝牙仿真游戏手柄，商品编号：002 <br />
+                VR射击蓝牙仿真游戏手柄，商品编号：002 <br />
                 支持Android、IOS,支持资源丰富，外观仿真，摇杆、震动、手柄多功能合一<br /><span style="color:red;">原价160元，现价110元</span>
             </div>
         </div>
@@ -34,7 +44,7 @@
     <div align="center" id='pro3'>
         <div class="divstyle">
             <div algin="center">
-                 休闲帽子，商品编号：009 <br />
+                休闲帽子，商品编号：009 <br />
                 服装、服饰<br /><span style="color:red;">原价20元，现价15元</span>
             </div>
         </div>
@@ -50,18 +60,16 @@
     <div align="center" id='pro5'>
         <div class="divstyle">
             <div algin="center">
-                 电动遥控水上快艇，商品编号：011 <br />
+                电动遥控水上快艇，商品编号：011 <br />
                 酷玩遥控快艇<br /><span style="color:red;">原价160元，现价110元</span>
             </div>
         </div>
     </div>
     <div align="center">
-        <div class="divstyle">
+        <div class="divstyle_bottom">
             <div algin="center">
-                商品编号<input id="code" type="text" style="width:300px;" /><br />
-                电话<input id="phone" type="text" style="width:300px;" /><br />
-                <span style="color:red;"></span><br/>
-                <input type="button" value="提交" onclick="getupload()" />
+                <h4>Copy Right Reserved By Sugar</h4>
+              
             </div>
         </div>
     </div>
