modify draw test on mobile

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
     </div>
     <div align="center" id="navtab">
         <div class="divstyle_nav">
-            <a href="">Reactjs</a>
-            <a href="">Angularjs</a>
-            <a href="">Nodejs</a>
-			<a href="pages/draw.html">IDraw</a>
-            <a href="">AboutMe</a>
+            <a href="" class="navstyle">Reactjs</a>
+            <a href="" class="navstyle">Angularjs</a>
+            <a href="" class="navstyle">Nodejs</a>
+			<a href="pages/draw.html" class="navstyle">IDraw</a>
+            <a href="" class="navstyle">AboutMe</a>
             <input type="button" id="getjson" value="test" onclick="getJson()"/>
         </div>
     </div>
